# x-agent-kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
MagicMock/load_config().memory.dir/4477220720/: plans.db
MagicMock/load_config().memory.dir/4551889920/: memory.db
MagicMock/load_config().memory.dir/4581534624/: memory.db
docs/superpowers/plans/: 2026-04-06-generic-framework-refactor.md
docs/superpowers/specs/: 2026-04-06-generic-framework-refactor-design.md
tests/: test_agent.py  test_approval_queue.py  test_brain_claude.py  test_brain_gemini.py  test_brain_openai.py  test_builtin_tools.py  test_channels.py  test_config.py  test_conversation.py  test_feishu_cards.py  test_feishu_message_handler.py  test_feishu_plan_handler.py  test_i18n.py  test_integration.py  test_memory.py  test_models.py  test_plan.py  test_plan_cards.py  test_plan_tools.py  test_progress.py  test_scheduler.py  test_skills.py  test_tools.py
tests/fixtures/.agent/: settings.json
tests/fixtures/.agent/skills/: my-rules.md
tests/fixtures/plugins/test-skill/: SKILL.md
tests/fixtures/plugins/test-skill/references/: extra.md
x_agent_kit/: __init__.py  agent.py  approval_queue.py  config.py  conversation.py  memory.py  models.py  plan.py  progress.py  scheduler.py
x_agent_kit/brain/: base.py  claude.py  gemini.py  openai_brain.py
x_agent_kit/channels/: base.py  cli_channel.py  feishu.py  feishu_cards.py
x_agent_kit/i18n/: __init__.py  en.json  zh_CN.json
x_agent_kit/skills/: loader.py
x_agent_kit/tools/: __init__.py  base.py  builtin.py  registry.py
