[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-agent-kit"
version = "0.2.0"
description = "Build autonomous AI agents with pluggable brains, tools, skills, and channels"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]
openai = ["openai>=1.0.0"]
feishu = ["lark-oapi>=1.5.0", "requests>=2.31.0"]
all = ["x-agent-kit[gemini,openai,feishu]"]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["x_agent_kit*"]

[tool.setuptools.package-data]
"x_agent_kit.i18n" = ["*.json"]
